# goph420-w2025-lab03-stZM

./: README.md  pyproject.toml
examples/: driver_rootfinding.py
src/goph420_lab03/: roots.py
