[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "goph420-w2025-lab03-stZM"
version = "0.0.1"
authors = [
{ name="Zoe Mitchell", email="Zoe.Mitchell@ucalgary.ca" },
]
description="Goph 420 Lab #3"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/karcheba1/goph420-w2025-lab00-stZM"